fix nav z-index

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html {
     color: white !important;
     position: fixed;
     width: 100%;
-    z-index: 1000;
+    z-index: 100000;
 
 }
 .navbar-brand{
